[package]
name = "tzstats-middleware"
version = "0.1.0"
authors = ["Dimitri Sabadie <dimitri.sabadie@gmail.com>"]
edition = "2018"

[dependencies]
serde = "1"
serde_json = "1"
reqwest = { version = "0.10", features = ["blocking", "json"] }
tokio = { version = "0.2", features = ["macros"] }
warp = "0.2"
